ecp-workload-identity-webhook/src/main/kubernetes/kubernetes.yml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: express-compute-workload-identity-webhook
  annotations:
    cert-manager.io/inject-ca-from: kube-system/express-compute-workload-identity-webhook-cert
webhooks:
- name: pod-identity.codriverlabs.ai
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
    scope: Namespaced
  clientConfig:
    service:
      namespace: kube-system
      name: express-compute-workload-identity-webhook
      path: /mutate
      port: 8443
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
  failurePolicy: Ignore
